Updated language files from Transifex

--- a/language/Bulgarian/strings.po
+++ b/language/Bulgarian/strings.po
@@ -40,6 +40,10 @@ msgctxt "#31032"
 msgid "Weather"
 msgstr "Времето"
 
+msgctxt "#31126"
+msgid "Watch in 2D"
+msgstr "Гледай в 2D режим"
+
 msgctxt "#31130"
 msgid "Director"
 msgstr "Режисьор"
@@ -54,7 +58,7 @@ msgstr "Актьори"
 
 msgctxt "#31135"
 msgid "Details"
-msgstr "Подробности"
+msgstr "Детайли"
 
 msgctxt "#31226"
 msgid "CDDB"
@@ -88,6 +92,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Доставчик"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Персонални фонове"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Профили"
@@ -99,6 +107,10 @@ msgstr "Облици"
 msgctxt "#31559"
 msgid "System Info"
 msgstr "Системна информация"
+
+msgctxt "#31562"
+msgid "View:"
+msgstr "Изглед:"
 
 msgctxt "#31564"
 msgid "Current Theme:"
@@ -119,6 +131,10 @@ msgstr "Удебелен"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Стандартния за Kodi"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "светъл"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -164,6 +180,10 @@ msgctxt "#31709"
 msgid "TV Guide"
 msgstr "ТВ справочник"
 
+msgctxt "#31801"
+msgid "Startup"
+msgstr "Стартиране"
+
 msgctxt "#31802"
 msgid "General"
 msgstr "Главни"
@@ -176,9 +196,29 @@ msgctxt "#31804"
 msgid "Background"
 msgstr "Фон"
 
+msgctxt "#31806"
+msgid "Custom Favourites"
+msgstr "Персонални любими"
+
 msgctxt "#31807"
 msgid "Support"
 msgstr "Поддръжка"
+
+msgctxt "#31857"
+msgid "Custom Image"
+msgstr "Персонално изображение"
+
+msgctxt "#31858"
+msgid "Custom Video"
+msgstr "Персонално видео"
+
+msgctxt "#31860"
+msgid "Choose Custom background"
+msgstr "Изберете персонален фон"
+
+msgctxt "#31861"
+msgid "Reset Custom background"
+msgstr "Нулирай персоналния фон"
 
 msgctxt "#31875"
 msgid "Always"
@@ -187,6 +227,10 @@ msgstr "Винаги"
 msgctxt "#31877"
 msgid "Never"
 msgstr "Никога"
+
+msgctxt "#31892"
+msgid "Use TV Tunes"
+msgstr "Възпроизвеждай мелодии в библиотеката (добавка TvTunes)"
 
 msgctxt "#31906"
 msgid "Addons in Home menu"
@@ -236,6 +280,10 @@ msgctxt "#31950"
 msgid "Posters"
 msgstr "Постери"
 
+msgctxt "#31951"
+msgid "Vertical"
+msgstr "Вертикален"
+
 msgctxt "#31953"
 msgid "Icon"
 msgstr "Икона"
@@ -251,10 +299,6 @@ msgstr "Препоръчано"
 msgctxt "#31960"
 msgid "Recommended Movies"
 msgstr "Препоръчани филми"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Препоръчани епизоди"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
