--- a/language/Chinese (Simple)/strings.po
+++ b/language/Chinese (Simple)/strings.po
@@ -108,6 +108,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "提供者"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "自定义背景"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "用户配置"
@@ -179,6 +183,10 @@ msgstr "粗体"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Kodi默认"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "小"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -312,14 +320,6 @@ msgctxt "#31865"
 msgid "Use Artistslideshow as background"
 msgstr "使用艺术家幻灯片作为自定义背景"
 
-msgctxt "#31866"
-msgid "Location of Custom Weather backgrounds"
-msgstr "自定义天气背景的地点"
-
-msgctxt "#31867"
-msgid "Reset Custom Weather backgrounds"
-msgstr "重置自定义天气背景"
-
 msgctxt "#31868"
 msgid "Background visibilty"
 msgstr "背景可视化"
@@ -331,14 +331,6 @@ msgstr "选择主屏幕水印图片"
 msgctxt "#31872"
 msgid "Reset Homescreen Watermark Image"
 msgstr "重置主屏幕水印图片"
-
-msgctxt "#31873"
-msgid "Location of Custom Weather icons"
-msgstr "自定义天气图标位置"
-
-msgctxt "#31874"
-msgid "Reset Custom Weather icons"
-msgstr "重置自定义天气图标"
 
 msgctxt "#31875"
 msgid "Always"
@@ -547,10 +539,6 @@ msgstr "推荐电影"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "即将播映剧集"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "推荐剧集"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
