--- a/language/Chinese (Traditional)/strings.po
+++ b/language/Chinese (Traditional)/strings.po
@@ -64,6 +64,10 @@ msgctxt "#31226"
 msgid "CDDB"
 msgstr "CDDB"
 
+msgctxt "#31227"
+msgid "Playlist Editor"
+msgstr "播放列表編輯"
+
 msgctxt "#31229"
 msgid "Rating"
 msgstr "評分"
@@ -79,6 +83,10 @@ msgstr "最後更新"
 msgctxt "#31536"
 msgid "Provider"
 msgstr "提供者"
+
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "自訂桌面背景集"
 
 msgctxt "#31555"
 msgid "Profiles"
@@ -99,6 +107,10 @@ msgstr "粗體"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Kodi 預設"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "細"
 
 msgctxt "#31652"
 msgid "Favourites"
