--- a/language/Czech/strings.po
+++ b/language/Czech/strings.po
@@ -92,6 +92,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Poskytovatel"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Vlastní pozadí"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Profily"
@@ -115,6 +119,10 @@ msgstr "Tučné"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Výchozí Kodi"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Lehký(é)"
 
 msgctxt "#31652"
 msgid "Favourites"
@@ -219,3 +227,7 @@ msgstr "Nedávné"
 msgctxt "#31955"
 msgid "Recommended"
 msgstr "Doporučeno"
+
+msgctxt "#31963"
+msgid "Recommended Albums"
+msgstr "Doporučená alba"
