--- a/language/Dutch/strings.po
+++ b/language/Dutch/strings.po
@@ -48,6 +48,14 @@ msgctxt "#31036"
 msgid "Play Disc"
 msgstr "Play Disc"
 
+msgctxt "#31037"
+msgid "Now Playing"
+msgstr "Speelt nu"
+
+msgctxt "#31038"
+msgid "Next Skip"
+msgstr "Volgende skip"
+
 msgctxt "#31126"
 msgid "Watch in 2D"
 msgstr "Bekijk in 2D"
@@ -120,6 +128,10 @@ msgctxt "#31303"
 msgid "Location of custom startup playlist."
 msgstr "Locatie van aangepaste opstart afspeellijst."
 
+msgctxt "#31304"
+msgid "Don't show Screen settings menus (know as side bar menu in some skins)."
+msgstr "Toon Scherm instellingen menu niet (in sommige skins bekend als Sidebar menu)"
+
 msgctxt "#31305"
 msgid "Select when to show scrollbar."
 msgstr "Selecteer wanneer de scrolbalk te tonen."
@@ -135,14 +147,6 @@ msgstr "Toon afspeldende media details voor afspelende media."
 msgctxt "#31308"
 msgid "Display a media case around Album or Video cover icon."
 msgstr "Toon een media hoes rondom album of video cover icoon."
-
-msgctxt "#31309"
-msgid "Location of Weather icons to replace Kodi supplied icons."
-msgstr "Locatie van weer iconen te vervangen door Kodi gegeven iconen."
-
-msgctxt "#31310"
-msgid "Use TVTunes script to provide theme tune for Movies and TVShows while browsing library."
-msgstr "Gebruikt TVTunes script om te voorzien in thema tune voor films en TV afleveringen tijden zoeken in bibliotheek"
 
 msgctxt "#31311"
 msgid "Use Artwork Download script to download additional media images for All library media items."
@@ -328,6 +332,18 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Provider"
 
+msgctxt "#31551"
+msgid "Static Icons"
+msgstr "Statische iconen"
+
+msgctxt "#31552"
+msgid "Animated Icons"
+msgstr "Geanimeerde iconen"
+
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Aangepaste achtergronden"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Profielen"
@@ -355,6 +371,10 @@ msgstr "Bestand instellingen"
 msgctxt "#31561"
 msgid "3D Settings"
 msgstr "3D instellingen"
+
+msgctxt "#31562"
+msgid "View:"
+msgstr "Bekijken:"
 
 msgctxt "#31563"
 msgid "Skin Version:"
@@ -411,6 +431,10 @@ msgstr "Vet"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Kodi Standaard"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Lichte"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -605,12 +629,8 @@ msgid "Use Artistslideshow as background"
 msgstr "Gebruik Artiesten diavoorstelling als achtergrond"
 
 msgctxt "#31866"
-msgid "Location of Custom Weather backgrounds"
-msgstr "Locatie van willekeurige weer achteronden"
-
-msgctxt "#31867"
-msgid "Reset Custom Weather backgrounds"
-msgstr "Herstel willekeurige weer achtergronden"
+msgid "Weather backgrounds"
+msgstr "Weerachtergronden"
 
 msgctxt "#31868"
 msgid "Background visibilty"
@@ -629,12 +649,8 @@ msgid "Reset Homescreen Watermark Image"
 msgstr "Herstel startscherm watermerk afbeelding"
 
 msgctxt "#31873"
-msgid "Location of Custom Weather icons"
-msgstr "Locatie van willekeurige weer iconen"
-
-msgctxt "#31874"
-msgid "Reset Custom Weather icons"
-msgstr "Herstel willekeurige weer iconen"
+msgid "Weather icons"
+msgstr "Weericonen"
 
 msgctxt "#31875"
 msgid "Always"
@@ -647,6 +663,10 @@ msgstr "Bij scrollen of focus"
 msgctxt "#31877"
 msgid "Never"
 msgstr "Nooit"
+
+msgctxt "#31880"
+msgid "Lock Screen settings menus"
+msgstr "Blokkeer Scherminstellingen menu"
 
 msgctxt "#31881"
 msgid "Use scrollbar"
@@ -859,10 +879,6 @@ msgstr "Aanbevolen Films"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "Volgende uitgezonden afleveringen"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Aanbevolen TV afleveringen"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
