--- a/language/English (New Zealand)/strings.po
+++ b/language/English (New Zealand)/strings.po
@@ -48,6 +48,14 @@ msgctxt "#31036"
 msgid "Play Disc"
 msgstr "Play Disc"
 
+msgctxt "#31037"
+msgid "Now Playing"
+msgstr "Now Playing"
+
+msgctxt "#31038"
+msgid "Next Skip"
+msgstr "Next Skip"
+
 msgctxt "#31126"
 msgid "Watch in 2D"
 msgstr "Watch in 2D"
@@ -104,6 +112,170 @@ msgctxt "#31232"
 msgid "Year:"
 msgstr "Year:"
 
+msgctxt "#31300"
+msgid "Select type of image to display at startup."
+msgstr "Select type of image to display at startup."
+
+msgctxt "#31301"
+msgid "Location of custom image or video to display on startup screen."
+msgstr "Location of custom image or video to display on startup screen."
+
+msgctxt "#31302"
+msgid "Play custom playlist at startup."
+msgstr "Play custom playlist at startup."
+
+msgctxt "#31303"
+msgid "Location of custom startup playlist."
+msgstr "Location of custom startup playlist."
+
+msgctxt "#31305"
+msgid "Select when to show scrollbar."
+msgstr "Select when to show scrollbar."
+
+msgctxt "#31306"
+msgid "Scroll label or textbox contents when length of field exceeds defined length."
+msgstr "Scroll label or textbox contents when length of field exceeds defined length."
+
+msgctxt "#31307"
+msgid "Show playing media details for playing media."
+msgstr "Show playing media details for playing media."
+
+msgctxt "#31308"
+msgid "Display a media case around Album or Video cover icon."
+msgstr "Display a media case around Album or Video cover icon."
+
+msgctxt "#31311"
+msgid "Use Artwork Download script to download additional media images for All library media items."
+msgstr "Use Artwork Download script to download additional media images for All library media items."
+
+msgctxt "#31312"
+msgid "Show current time on home screen."
+msgstr "Show current time on home screen."
+
+msgctxt "#31313"
+msgid "Show current weather outlook on home screen."
+msgstr "Show current weather outlook on home screen."
+
+msgctxt "#31314"
+msgid "Location of custom image to use as a watermark on home screen (only on Horizontal home menu type)."
+msgstr "Location of custom image to use as a watermark on home screen (only on Horisontal home menu type)."
+
+msgctxt "#31315"
+msgid "Type of image(s) to use on Movie shelf (On Horizontal or Icon menu type only)."
+msgstr "Type of image(s) to use on Movie shelf (On Horizontal or Icon menu type only)."
+
+msgctxt "#31316"
+msgid "Type of image(s) to use on TVShows shelf (On Horizontal or Icon menu type only)."
+msgstr "Type of image(s) to use on TVShows shelf (On Horizontal or Icon menu type only)."
+
+msgctxt "#31317"
+msgid "Subtype of image(s) to use on TVShows shelf."
+msgstr "Subtype of image(s) to use on TVShows shelf."
+
+msgctxt "#31318"
+msgid "Type of image(s) to use on Music shelf (On Horizontal or Icon menu type only)."
+msgstr "Type of image(s) to use on Music shelf (On Horizontal or Icon menu type only)."
+
+msgctxt "#31321"
+msgid "Type of Home menu type to use on home menu screen."
+msgstr "Type of Home menu type to use on home menu screen."
+
+msgctxt "#31322"
+msgid "Show 'Videos' item in home menu."
+msgstr "Show 'Videos' item in home menu."
+
+msgctxt "#31323"
+msgid "Show 'Movies' item in home menu."
+msgstr "Show 'Movies' item in home menu."
+
+msgctxt "#31324"
+msgid "Show 'TVShows' item in home menu."
+msgstr "Show 'TVShows' item in home menu."
+
+msgctxt "#31325"
+msgid "Show 'Music Videos' item in home menu."
+msgstr "Show 'Music Videos' item in home menu."
+
+msgctxt "#31328"
+msgid "Show 'Music' item in home menu."
+msgstr "Show 'Music' item in home menu."
+
+msgctxt "#31329"
+msgid "Show 'Addons' item in home menu."
+msgstr "Show 'Addons' item in home menu."
+
+msgctxt "#31330"
+msgid "Show 'Pictures' item in home menu."
+msgstr "Show 'Pictures' item in home menu."
+
+msgctxt "#31331"
+msgid "Show User 'Profiles' item in home menu."
+msgstr "Show User 'Profiles' item in home menu."
+
+msgctxt "#31332"
+msgid "Show 'Weather' item in home menu."
+msgstr "Show 'Weather' item in home menu."
+
+msgctxt "#31333"
+msgid "Show User 'Favourites' item in home menu."
+msgstr "Show User 'Favourites' item in home menu."
+
+msgctxt "#31334"
+msgid "Show 'Search' item in home menu."
+msgstr "Show 'Search' item in home menu."
+
+msgctxt "#31335"
+msgid "Show 'Play Disc' item in home menu."
+msgstr "Show 'Play Disc' item in home menu."
+
+msgctxt "#31336"
+msgid "Show 'Quit' item in home menu."
+msgstr "Show 'Quit' item in home menu."
+
+msgctxt "#31337"
+msgid "Select action of Quit home menu item in home menu screen."
+msgstr "Select action of Quit home menu item in home menu screen."
+
+msgctxt "#31340"
+msgid "Location of custom skin background image."
+msgstr "Location of custom skin background image."
+
+msgctxt "#31341"
+msgid "Use FanArt image if available as skin background image."
+msgstr "Use FanArt image if available as skin background image."
+
+msgctxt "#31342"
+msgid "Use 'Extra' FanArt image if available as skin background image."
+msgstr "Use 'Extra' FanArt image if available as skin background image."
+
+msgctxt "#31343"
+msgid "Use Playing video or Music visualisation if available as skin background image."
+msgstr "Use Playing video or Music visualisation if available as skin background image."
+
+msgctxt "#31344"
+msgid "Use Artistslideshow script to provide Music Artist FanArt image if available as skin background image."
+msgstr "Use Artistslideshow script to provide Music Artist FanArt image if available as skin background image."
+
+msgctxt "#31345"
+msgid "Location of custom weather condition background images to use in weather screen."
+msgstr "Location of custom weather condition background images to use in weather screen."
+
+msgctxt "#31350"
+msgid "Set location to enter Movie library when Movie item selected on home menu screen."
+msgstr "Set location to enter Movie library when Movie item selected on home menu screen."
+
+msgctxt "#31351"
+msgid "Set location to enter TVShow library when TVShow item selected on home menu screen."
+msgstr "Set location to enter TVShow library when TVShow item selected on home menu screen."
+
+msgctxt "#31352"
+msgid "Set location to enter Music Video library when Music Video item selected on home menu screen."
+msgstr "Set location to enter Music Video library when Music Video item selected on home menu screen."
+
+msgctxt "#31353"
+msgid "Set location to enter Music library when Music item selected on home menu screen."
+msgstr "Set location to enter Music library when Music item selected on home menu screen."
+
 msgctxt "#31528"
 msgid "Currently"
 msgstr "Currently"
@@ -120,6 +292,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Provider"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Custom backgrounds"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Profiles"
@@ -135,6 +311,10 @@ msgstr "Power Menu"
 msgctxt "#31559"
 msgid "System Info"
 msgstr "System Info"
+
+msgctxt "#31562"
+msgid "View:"
+msgstr "View:"
 
 msgctxt "#31563"
 msgid "Skin Version:"
@@ -191,6 +371,10 @@ msgstr "Bold"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Kodi Default"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Light"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -272,6 +456,10 @@ msgctxt "#31804"
 msgid "Background"
 msgstr "Background"
 
+msgctxt "#31805"
+msgid "Media Entry Points"
+msgstr "Media Entry Points"
+
 msgctxt "#31806"
 msgid "Custom Favourites"
 msgstr "Custom Favourites"
@@ -296,6 +484,14 @@ msgctxt "#31853"
 msgid "Choose playlist:"
 msgstr "Choose playlist:"
 
+msgctxt "#31857"
+msgid "Custom Image"
+msgstr "Custom Image"
+
+msgctxt "#31858"
+msgid "Custom Video"
+msgstr "Custom Video"
+
 msgctxt "#31860"
 msgid "Choose Custom background"
 msgstr "Choose Custom background"
@@ -319,14 +515,6 @@ msgstr "Use ExtraFanart as background"
 msgctxt "#31865"
 msgid "Use Artistslideshow as background"
 msgstr "Use Artistslideshow as background"
-
-msgctxt "#31866"
-msgid "Location of Custom Weather backgrounds"
-msgstr "Location of Custom Weather backgrounds"
-
-msgctxt "#31867"
-msgid "Reset Custom Weather backgrounds"
-msgstr "Reset Custom Weather backgrounds"
 
 msgctxt "#31868"
 msgid "Background visibilty"
@@ -535,10 +723,6 @@ msgstr "Recommended Movies"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "Next Aired Episodes"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Recommended TV Episodes"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
