--- a/language/French (Canada)/strings.po
+++ b/language/French (Canada)/strings.po
@@ -48,6 +48,14 @@ msgctxt "#31036"
 msgid "Play Disc"
 msgstr "Lire le disque"
 
+msgctxt "#31037"
+msgid "Now Playing"
+msgstr "Lecture en cours"
+
+msgctxt "#31038"
+msgid "Next Skip"
+msgstr "Prochain saut"
+
 msgctxt "#31126"
 msgid "Watch in 2D"
 msgstr "Regarder en 2D"
@@ -120,6 +128,10 @@ msgctxt "#31303"
 msgid "Location of custom startup playlist."
 msgstr "Emplacement de la liste de lecture personnalisée au démarrage"
 
+msgctxt "#31304"
+msgid "Don't show Screen settings menus (know as side bar menu in some skins)."
+msgstr "Ne pas montrer les menus des paramètres de l'écran (connus comme menus de la barre latérale dans certains habillages)."
+
 msgctxt "#31305"
 msgid "Select when to show scrollbar."
 msgstr "Choisir quand montrer la barre de défilement."
@@ -135,14 +147,6 @@ msgstr "Montrer les détails du média en cours de lecture."
 msgctxt "#31308"
 msgid "Display a media case around Album or Video cover icon."
 msgstr "Afficher un boîtier de média autour de l'icône de couverture de l'album ou de la vidéo."
-
-msgctxt "#31309"
-msgid "Location of Weather icons to replace Kodi supplied icons."
-msgstr "Emplacement des icônes de la météo pour remplacer celles fournies par Kodi."
-
-msgctxt "#31310"
-msgid "Use TVTunes script to provide theme tune for Movies and TVShows while browsing library."
-msgstr "Utiliser TVTunes pour fournir la chanson thème des films et des émissions télé lors du parcours de la vidéothèque."
 
 msgctxt "#31311"
 msgid "Use Artwork Download script to download additional media images for All library media items."
@@ -310,7 +314,7 @@ msgstr "Activer la surcouche de grille de débogage pour aider les utilisateurs 
 
 msgctxt "#31373"
 msgid "Turn on debug info overlay to help users identify currently displayed windows and focused screen items."
-msgstr "Activer la surcouche d'infos de débogage pour aider les utilisateurs à identifier les images affichées et les éléments d'écran actuellement ciblés."
+msgstr "Activer la surcouche d'infos de débogage pour aider les utilisateurs à identifier les images affichées et les éléments d'écran ciblés présentement."
 
 msgctxt "#31528"
 msgid "Currently"
@@ -327,6 +331,18 @@ msgstr "Dernière mise à jour"
 msgctxt "#31536"
 msgid "Provider"
 msgstr "Fournisseur"
+
+msgctxt "#31551"
+msgid "Static Icons"
+msgstr "Icônes fixes"
+
+msgctxt "#31552"
+msgid "Animated Icons"
+msgstr "Icônes animées"
+
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Arrière-plans personnalisés"
 
 msgctxt "#31555"
 msgid "Profiles"
@@ -355,6 +371,10 @@ msgstr "Paramètres de l'élément"
 msgctxt "#31561"
 msgid "3D Settings"
 msgstr "Paramètres de la 3D"
+
+msgctxt "#31562"
+msgid "View:"
+msgstr "Vue : "
 
 msgctxt "#31563"
 msgid "Skin Version:"
@@ -411,6 +431,10 @@ msgstr "Gras"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Valeur par défaut de Kodi"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Clair"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -605,12 +629,8 @@ msgid "Use Artistslideshow as background"
 msgstr "Utiliser diaporamadel'artiste comme arrière-plan"
 
 msgctxt "#31866"
-msgid "Location of Custom Weather backgrounds"
-msgstr "Emplacement des arrière-plans personnalisés de la météo"
-
-msgctxt "#31867"
-msgid "Reset Custom Weather backgrounds"
-msgstr "Réinitialiser les arrière-plans personnalisés de la météo"
+msgid "Weather backgrounds"
+msgstr "Arrière-plans de la météo"
 
 msgctxt "#31868"
 msgid "Background visibilty"
@@ -629,12 +649,8 @@ msgid "Reset Homescreen Watermark Image"
 msgstr "Réinitialiser l'image du filigrane de l'écran d'accueil"
 
 msgctxt "#31873"
-msgid "Location of Custom Weather icons"
-msgstr "Emplacement des icônes personnalisées de la météo"
-
-msgctxt "#31874"
-msgid "Reset Custom Weather icons"
-msgstr "Réinitialiser les icônes personnalisées de la météo"
+msgid "Weather icons"
+msgstr "Icônes de la météo"
 
 msgctxt "#31875"
 msgid "Always"
@@ -647,6 +663,10 @@ msgstr "Lors du défilement ou si ciblé"
 msgctxt "#31877"
 msgid "Never"
 msgstr "Jamais"
+
+msgctxt "#31880"
+msgid "Lock Screen settings menus"
+msgstr "Menus des paramètres du verrouillage de l'écran"
 
 msgctxt "#31881"
 msgid "Use scrollbar"
@@ -859,10 +879,6 @@ msgstr "Films recommandés"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "Prochains épisodes diffusés"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Épisodes télé recommandés"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
