--- a/language/French/strings.po
+++ b/language/French/strings.po
@@ -48,6 +48,14 @@ msgctxt "#31036"
 msgid "Play Disc"
 msgstr "Lire un disque"
 
+msgctxt "#31037"
+msgid "Now Playing"
+msgstr "Lecture en cours"
+
+msgctxt "#31038"
+msgid "Next Skip"
+msgstr "Prochain saut"
+
 msgctxt "#31126"
 msgid "Watch in 2D"
 msgstr "Regarder en 2D"
@@ -120,6 +128,10 @@ msgctxt "#31303"
 msgid "Location of custom startup playlist."
 msgstr "Emplacement de la liste de lecture personnalisée au démarrage"
 
+msgctxt "#31304"
+msgid "Don't show Screen settings menus (know as side bar menu in some skins)."
+msgstr "Ne pas montrer les menus de paramètres d''écran (connus comme menus de barre latérale dans certains habillages)."
+
 msgctxt "#31305"
 msgid "Select when to show scrollbar."
 msgstr "Choisir quand la barre de défilement doit être visible."
@@ -135,14 +147,6 @@ msgstr "Afficher les détails de lecture du média pendant la lecture."
 msgctxt "#31308"
 msgid "Display a media case around Album or Video cover icon."
 msgstr "Afficher une boîte de médias autour de l'icône de couverture d'album ou de jaquette "
-
-msgctxt "#31309"
-msgid "Location of Weather icons to replace Kodi supplied icons."
-msgstr "Emplacement des icônes météo pour remplacer celles fournies avec Kodi."
-
-msgctxt "#31310"
-msgid "Use TVTunes script to provide theme tune for Movies and TVShows while browsing library."
-msgstr "Utiliser le script TVTunes pour obtenir les musiques de films et TVShows en naviguant dans la médiathèque."
 
 msgctxt "#31311"
 msgid "Use Artwork Download script to download additional media images for All library media items."
@@ -306,11 +310,11 @@ msgstr "Activer la journalisation de débogage 'complète'."
 
 msgctxt "#31372"
 msgid "Turn on debug grid overlay to help users locate on screen skin items."
-msgstr "Activer l'incrustation de la grille de journalisation pour aider les utilisateurs à localiser les éléments du thème à l'écran."
+msgstr "Activer la surcouche de grille de journalisation pour aider les utilisateurs à localiser à l'écran les éléments de l'habillage."
 
 msgctxt "#31373"
 msgid "Turn on debug info overlay to help users identify currently displayed windows and focused screen items."
-msgstr "Activer l'incrustation des informations de débogage pour aider les utilisateurs à identifier les fenêtres en cours d'affichage ainsi que les éléments actifs à l'écran."
+msgstr "Activer la surcouche d'infos de débogage pour aider les utilisateurs à identifier les fenêtres en cours d'affichage ainsi que les éléments sélectionnés à l'écran."
 
 msgctxt "#31528"
 msgid "Currently"
@@ -327,6 +331,18 @@ msgstr "Dernière mise à  jour"
 msgctxt "#31536"
 msgid "Provider"
 msgstr "Fournisseur"
+
+msgctxt "#31551"
+msgid "Static Icons"
+msgstr "Icônes statiques"
+
+msgctxt "#31552"
+msgid "Animated Icons"
+msgstr "Icônes animées"
+
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Arrières-plans personnalisés"
 
 msgctxt "#31555"
 msgid "Profiles"
@@ -355,6 +371,10 @@ msgstr "Paramètres d'élément"
 msgctxt "#31561"
 msgid "3D Settings"
 msgstr "Paramètres 3D"
+
+msgctxt "#31562"
+msgid "View:"
+msgstr "Vue:"
 
 msgctxt "#31563"
 msgid "Skin Version:"
@@ -411,6 +431,10 @@ msgstr "Gras"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Prédéfini par Kodi"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Légère"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -605,12 +629,8 @@ msgid "Use Artistslideshow as background"
 msgstr "Utiliser Artistslideshow comme arrière-plan"
 
 msgctxt "#31866"
-msgid "Location of Custom Weather backgrounds"
-msgstr "Localisation des arrières-plans météo personnalisés"
-
-msgctxt "#31867"
-msgid "Reset Custom Weather backgrounds"
-msgstr "Réinitialiser les arrières-plans météo personnalisés"
+msgid "Weather backgrounds"
+msgstr "Arrières-plan de la météo"
 
 msgctxt "#31868"
 msgid "Background visibilty"
@@ -629,12 +649,8 @@ msgid "Reset Homescreen Watermark Image"
 msgstr "Réinitialiser l'image en filigrane de l'écran d'accueil"
 
 msgctxt "#31873"
-msgid "Location of Custom Weather icons"
-msgstr "Localisation des icônes météo personnalisées"
-
-msgctxt "#31874"
-msgid "Reset Custom Weather icons"
-msgstr "Réinitialiser des icônes météo personnalisées"
+msgid "Weather icons"
+msgstr "Icônes Météo"
 
 msgctxt "#31875"
 msgid "Always"
@@ -647,6 +663,10 @@ msgstr "Si défilement ou positionnement"
 msgctxt "#31877"
 msgid "Never"
 msgstr "Jamais"
+
+msgctxt "#31880"
+msgid "Lock Screen settings menus"
+msgstr "Menus des paramètres du verrouillage d'écran"
 
 msgctxt "#31881"
 msgid "Use scrollbar"
@@ -818,7 +838,7 @@ msgstr "Logos"
 
 msgctxt "#31948"
 msgid "Clearart"
-msgstr "Clearart"
+msgstr "Illustrations transparentes"
 
 msgctxt "#31949"
 msgid "Banners"
@@ -859,10 +879,6 @@ msgstr "Films recommandé"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "Épisodes diffusés ensuite"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Épisodes TV recommandés"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
