--- a/language/Galician/strings.po
+++ b/language/Galician/strings.po
@@ -48,6 +48,10 @@ msgctxt "#31036"
 msgid "Play Disc"
 msgstr "Reproducir Disco"
 
+msgctxt "#31037"
+msgid "Now Playing"
+msgstr "Reproducindo"
+
 msgctxt "#31129"
 msgid "Finish Time: "
 msgstr "Final:"
@@ -116,6 +120,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Provedor"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Fondos personalizados"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Perfís"
@@ -131,6 +139,10 @@ msgstr "Menú Enerxía"
 msgctxt "#31559"
 msgid "System Info"
 msgstr "Información do Sistema"
+
+msgctxt "#31562"
+msgid "View:"
+msgstr "Vista:"
 
 msgctxt "#31563"
 msgid "Skin Version:"
@@ -187,6 +199,10 @@ msgstr "Negra"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Kodi Predefinido"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Luz"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -380,14 +396,6 @@ msgctxt "#31865"
 msgid "Use Artistslideshow as background"
 msgstr "Usar diapositivas de artistas como fondo"
 
-msgctxt "#31866"
-msgid "Location of Custom Weather backgrounds"
-msgstr "Localización do fondo personalizado do Tempo"
-
-msgctxt "#31867"
-msgid "Reset Custom Weather backgrounds"
-msgstr "Restabelecer o fondo personalizado do Tempo"
-
 msgctxt "#31868"
 msgid "Background visibilty"
 msgstr "Visibilidade do Fondo"
@@ -403,14 +411,6 @@ msgstr "Escoller a Marca de Auga da Pantalla Principal"
 msgctxt "#31872"
 msgid "Reset Homescreen Watermark Image"
 msgstr "Restabelecer a Marca de Auga da Pantalla Principal"
-
-msgctxt "#31873"
-msgid "Location of Custom Weather icons"
-msgstr "Localización das Iconas do Tempo personalizadas"
-
-msgctxt "#31874"
-msgid "Reset Custom Weather icons"
-msgstr "Restabelecer as Iconas do Tempo personalizadas"
 
 msgctxt "#31875"
 msgid "Always"
@@ -619,10 +619,6 @@ msgstr "Filmes Recomendados"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "Seguintes Episodios"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Episodios Recomendados"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
