--- a/language/German/strings.po
+++ b/language/German/strings.po
@@ -52,6 +52,10 @@ msgctxt "#31037"
 msgid "Now Playing"
 msgstr "Läuft gerade"
 
+msgctxt "#31038"
+msgid "Next Skip"
+msgstr "Nächster Schritt"
+
 msgctxt "#31126"
 msgid "Watch in 2D"
 msgstr "In 2D anschauen"
@@ -216,6 +220,18 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Anbieter"
 
+msgctxt "#31551"
+msgid "Static Icons"
+msgstr "Statische Symbole"
+
+msgctxt "#31552"
+msgid "Animated Icons"
+msgstr "Animierte Symbole"
+
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Benutzerdefinierte Hintergründe"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Profile"
@@ -243,6 +259,10 @@ msgstr "Eintragseinstellungen"
 msgctxt "#31561"
 msgid "3D Settings"
 msgstr "3D-Einstellungen"
+
+msgctxt "#31562"
+msgid "View:"
+msgstr "Anzeige:"
 
 msgctxt "#31563"
 msgid "Skin Version:"
@@ -299,6 +319,10 @@ msgstr "Fett"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Kodi-Standard"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Heller"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -493,12 +517,8 @@ msgid "Use Artistslideshow as background"
 msgstr "Interpretenslideshow als Hintergrund verwenden"
 
 msgctxt "#31866"
-msgid "Location of Custom Weather backgrounds"
-msgstr "Standort für benutzerdefinierten Wetterhintergrund"
-
-msgctxt "#31867"
-msgid "Reset Custom Weather backgrounds"
-msgstr "Benutzerdefinierten Wetterhintergrund zurücksetzen"
+msgid "Weather backgrounds"
+msgstr "Wetterhintergründe"
 
 msgctxt "#31868"
 msgid "Background visibilty"
@@ -517,12 +537,8 @@ msgid "Reset Homescreen Watermark Image"
 msgstr "Wasserzeichen im Hauptbildschirm zurücksetzen"
 
 msgctxt "#31873"
-msgid "Location of Custom Weather icons"
-msgstr "Ort der benutzerdefinierten Wettersymbole"
-
-msgctxt "#31874"
-msgid "Reset Custom Weather icons"
-msgstr "Benutzerdefinierte Wettersymbole zurücksetzen"
+msgid "Weather icons"
+msgstr "Wettersymbole"
 
 msgctxt "#31875"
 msgid "Always"
@@ -535,6 +551,10 @@ msgstr "Bei Bildlauf oder Fokus-Erhalt"
 msgctxt "#31877"
 msgid "Never"
 msgstr "Nie"
+
+msgctxt "#31880"
+msgid "Lock Screen settings menus"
+msgstr "Bildschirmeinstellungsmenüs sperren"
 
 msgctxt "#31881"
 msgid "Use scrollbar"
@@ -747,10 +767,6 @@ msgstr "Empfohlene Filme"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "Nächste gesendete Folgen"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Empfohlene Fernsehfolgen"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
