--- a/language/Greek/strings.po
+++ b/language/Greek/strings.po
@@ -112,6 +112,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Πάροχος"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Προσαρμοσμένα υπόβαθρα"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Προφίλ"
@@ -183,6 +187,10 @@ msgstr "Έντονα"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Προεπιλογή Kodi"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Ασθενής"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -352,14 +360,6 @@ msgctxt "#31865"
 msgid "Use Artistslideshow as background"
 msgstr "Χρήση Παρουσίασης Διαφανειών σαν υπόβαθρο"
 
-msgctxt "#31866"
-msgid "Location of Custom Weather backgrounds"
-msgstr "Τοποθεσία Προσαρμοσμένων Καιρικών Υποβάθρων"
-
-msgctxt "#31867"
-msgid "Reset Custom Weather backgrounds"
-msgstr "Επαναφορά Προσαρμοσμένων Καιρικών Υποβάθρων"
-
 msgctxt "#31868"
 msgid "Background visibilty"
 msgstr "Ορατότητα Υποβάθρου"
@@ -375,14 +375,6 @@ msgstr "Επιλογή Υδατογραφήματος Αρχ. Οθόνης"
 msgctxt "#31872"
 msgid "Reset Homescreen Watermark Image"
 msgstr "Επαναφορά Υδατογραφήματος Αρχ. Οθόνης"
-
-msgctxt "#31873"
-msgid "Location of Custom Weather icons"
-msgstr "Τοποθεσία Προσαρμοσμένων Εικονιδίων Καιρού"
-
-msgctxt "#31874"
-msgid "Reset Custom Weather icons"
-msgstr "Επαναφορά Προσαρμοσμένων Εικονιδίων Καιρού"
 
 msgctxt "#31875"
 msgid "Always"
@@ -603,10 +595,6 @@ msgstr "Προτεινόμενες Ταινίες"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "Επόμενα Επεισόδια"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Προτεινόμενα Επεισόδια"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
