--- a/language/Hebrew/strings.po
+++ b/language/Hebrew/strings.po
@@ -44,6 +44,10 @@ msgctxt "#31036"
 msgid "Play Disc"
 msgstr "ניגון דיסק"
 
+msgctxt "#31037"
+msgid "Now Playing"
+msgstr "מנגן כעת"
+
 msgctxt "#31129"
 msgid "Finish Time: "
 msgstr "זמן סיום:"
@@ -112,6 +116,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "ספק"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "רקעים מותאמים אישית"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "משתמשים"
@@ -127,6 +135,10 @@ msgstr "תפריט כיבוי"
 msgctxt "#31559"
 msgid "System Info"
 msgstr "פרטי מערכת"
+
+msgctxt "#31562"
+msgid "View:"
+msgstr "תצוגה"
 
 msgctxt "#31563"
 msgid "Skin Version:"
@@ -183,6 +195,10 @@ msgstr "מודגש"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "ברירות מחדל Kodi"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "בהיר"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -555,10 +571,6 @@ msgstr "סרטים מומלצים"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "פרקים הבאים שישודרו"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "פרקים מומלצים"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
