--- a/language/Hungarian/strings.po
+++ b/language/Hungarian/strings.po
@@ -108,6 +108,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Szolgáltató"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Testreszabott hátterek"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Profilok"
@@ -179,6 +183,10 @@ msgstr "Félkövér"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Kodi Alapbeállítás"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Enyhe"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -312,14 +320,6 @@ msgctxt "#31865"
 msgid "Use Artistslideshow as background"
 msgstr "Artistslideshow használata háttérnek"
 
-msgctxt "#31866"
-msgid "Location of Custom Weather backgrounds"
-msgstr "Egyéni időjárás-hátterek helye"
-
-msgctxt "#31867"
-msgid "Reset Custom Weather backgrounds"
-msgstr "Egyéni Időjárás háttér visszaállítása"
-
 msgctxt "#31868"
 msgid "Background visibilty"
 msgstr "Háttér láthatósága"
@@ -331,14 +331,6 @@ msgstr "Főképernyő Vízjel Kép kiválasztása"
 msgctxt "#31872"
 msgid "Reset Homescreen Watermark Image"
 msgstr "Főképernyő Vízjel Kép visszaállítása"
-
-msgctxt "#31873"
-msgid "Location of Custom Weather icons"
-msgstr "Egyéni időjárás-ikonok helye"
-
-msgctxt "#31874"
-msgid "Reset Custom Weather icons"
-msgstr "Időjárás ikonok alaphelyzetbe állítása"
 
 msgctxt "#31875"
 msgid "Always"
@@ -547,10 +539,6 @@ msgstr "Ajánlott Filmek"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "Következő Sugárzott rész"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Ajánlott Sorozat részek"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
