--- a/language/Icelandic/strings.po
+++ b/language/Icelandic/strings.po
@@ -80,6 +80,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Veita"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Sérsniðinn bakgrunnar"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Notendur"
@@ -87,6 +91,10 @@ msgstr "Notendur"
 msgctxt "#31556"
 msgid "Skin"
 msgstr "Viðmót"
+
+msgctxt "#31562"
+msgid "View:"
+msgstr "Sýn:"
 
 msgctxt "#31575"
 msgid "Default"
@@ -99,6 +107,10 @@ msgstr "Feitletrað"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Kodi Sjálfgefið"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Létt"
 
 msgctxt "#31652"
 msgid "Favourites"
@@ -131,6 +143,10 @@ msgstr "Spila"
 msgctxt "#31709"
 msgid "TV Guide"
 msgstr "Dagskrá"
+
+msgctxt "#31801"
+msgid "Startup"
+msgstr "Ræsing"
 
 msgctxt "#31802"
 msgid "General"
