--- a/language/Korean/strings.po
+++ b/language/Korean/strings.po
@@ -120,6 +120,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "공급자"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "사용자 지정 배경"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "프로파일"
@@ -147,6 +151,10 @@ msgstr "항목 설정"
 msgctxt "#31561"
 msgid "3D Settings"
 msgstr "3D 설정"
+
+msgctxt "#31562"
+msgid "View:"
+msgstr "보기:"
 
 msgctxt "#31563"
 msgid "Skin Version:"
@@ -203,6 +211,10 @@ msgstr "굵게"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Kodi 기본"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "번개"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -396,14 +408,6 @@ msgctxt "#31865"
 msgid "Use Artistslideshow as background"
 msgstr "배경으로 ArtistSlideshow  사용"
 
-msgctxt "#31866"
-msgid "Location of Custom Weather backgrounds"
-msgstr "사용자 날씨 배경의 위치"
-
-msgctxt "#31867"
-msgid "Reset Custom Weather backgrounds"
-msgstr "사용자 날씨 배경 초기화"
-
 msgctxt "#31868"
 msgid "Background visibilty"
 msgstr "배경 시각화"
@@ -419,14 +423,6 @@ msgstr "홈 화면 워터마크 이미지 선택"
 msgctxt "#31872"
 msgid "Reset Homescreen Watermark Image"
 msgstr "홈 화면 워터마크 이미지 초기화"
-
-msgctxt "#31873"
-msgid "Location of Custom Weather icons"
-msgstr "사용자 날씨 아이콘 위치"
-
-msgctxt "#31874"
-msgid "Reset Custom Weather icons"
-msgstr "사용자 날씨 아이콘 초기화"
 
 msgctxt "#31875"
 msgid "Always"
@@ -651,10 +647,6 @@ msgstr "추천 영화"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "다음 방송 에피소드"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "추천 TV 에피소드"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
