--- a/language/Lithuanian/strings.po
+++ b/language/Lithuanian/strings.po
@@ -52,6 +52,10 @@ msgctxt "#31037"
 msgid "Now Playing"
 msgstr "Dabar atkuriama"
 
+msgctxt "#31038"
+msgid "Next Skip"
+msgstr "Kitas peršokimas"
+
 msgctxt "#31126"
 msgid "Watch in 2D"
 msgstr "Žiūrėti kaip 2D"
@@ -124,6 +128,10 @@ msgctxt "#31303"
 msgid "Location of custom startup playlist."
 msgstr "Savo paleidimo grojaraščio vieta."
 
+msgctxt "#31304"
+msgid "Don't show Screen settings menus (know as side bar menu in some skins)."
+msgstr "Nerodyti ekrano nustatymų meniu (kai kuriose teminėse išvaizdose žinomo kaip šoninio meniu)."
+
 msgctxt "#31305"
 msgid "Select when to show scrollbar."
 msgstr "Pasirinkite kada rodyti slinkties juostą."
@@ -139,14 +147,6 @@ msgstr "Rodyti atkuriamo media įrašo informaciją."
 msgctxt "#31308"
 msgid "Display a media case around Album or Video cover icon."
 msgstr "Rodyti media dėkliuką aplink albumo ar vaizdo įrašo viršelio piktogramą."
-
-msgctxt "#31309"
-msgid "Location of Weather icons to replace Kodi supplied icons."
-msgstr "Vieta orų piktogramų, kuriomis pakeisti Kodi pateiktas piktogramas."
-
-msgctxt "#31310"
-msgid "Use TVTunes script to provide theme tune for Movies and TVShows while browsing library."
-msgstr "Naudoti TVTunes scenarijų, kad pateikti temos melodiją filmams ir TV laidoms, kai naršoma bibliotekoje."
 
 msgctxt "#31311"
 msgid "Use Artwork Download script to download additional media images for All library media items."
@@ -332,6 +332,18 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Tiekėjas"
 
+msgctxt "#31551"
+msgid "Static Icons"
+msgstr "Statinės piktogramos"
+
+msgctxt "#31552"
+msgid "Animated Icons"
+msgstr "Animuotos piktogramos"
+
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Savi fonai"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Profiliai"
@@ -359,6 +371,10 @@ msgstr "Elemento nustatymai"
 msgctxt "#31561"
 msgid "3D Settings"
 msgstr "3D Nustatymai"
+
+msgctxt "#31562"
+msgid "View:"
+msgstr "Rodinys:"
 
 msgctxt "#31563"
 msgid "Skin Version:"
@@ -415,6 +431,10 @@ msgstr "Paryškintas"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Kodi numatytasis"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "ŠviesusNedidelis"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -609,12 +629,8 @@ msgid "Use Artistslideshow as background"
 msgstr "Naudoti Artistslideshow kaip foną"
 
 msgctxt "#31866"
-msgid "Location of Custom Weather backgrounds"
-msgstr "Individualių orų fonų vieta"
-
-msgctxt "#31867"
-msgid "Reset Custom Weather backgrounds"
-msgstr "Atstatyti individualius orų fonus"
+msgid "Weather backgrounds"
+msgstr "Orų fonai"
 
 msgctxt "#31868"
 msgid "Background visibilty"
@@ -633,12 +649,8 @@ msgid "Reset Homescreen Watermark Image"
 msgstr "Atstatyti pradinio ekrano vandens žymės atvaizdą"
 
 msgctxt "#31873"
-msgid "Location of Custom Weather icons"
-msgstr "Individualių orų piktogramų vieta"
-
-msgctxt "#31874"
-msgid "Reset Custom Weather icons"
-msgstr "Atstatyti individualias orų piktogramas"
+msgid "Weather icons"
+msgstr "Orų piktogramos"
 
 msgctxt "#31875"
 msgid "Always"
@@ -651,6 +663,10 @@ msgstr "Slenkant ar pasirinkus"
 msgctxt "#31877"
 msgid "Never"
 msgstr "Niekada"
+
+msgctxt "#31880"
+msgid "Lock Screen settings menus"
+msgstr "Užrakinti ekrano nustatymų meniu"
 
 msgctxt "#31881"
 msgid "Use scrollbar"
@@ -863,10 +879,6 @@ msgstr "Rekomenduojami filmai"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "Kiti rodomi epizodai"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Rekomenduojami TV epizodai"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
