--- a/language/Malay/strings.po
+++ b/language/Malay/strings.po
@@ -48,6 +48,18 @@ msgctxt "#31036"
 msgid "Play Disc"
 msgstr "Main Cakera"
 
+msgctxt "#31037"
+msgid "Now Playing"
+msgstr "Kini Dimainkan"
+
+msgctxt "#31038"
+msgid "Next Skip"
+msgstr "Langkau Berikutnya"
+
+msgctxt "#31126"
+msgid "Watch in 2D"
+msgstr "Tonton dalam 2D"
+
 msgctxt "#31129"
 msgid "Finish Time: "
 msgstr "Masa Tamat:"
@@ -100,6 +112,210 @@ msgctxt "#31232"
 msgid "Year:"
 msgstr "Tahun:"
 
+msgctxt "#31300"
+msgid "Select type of image to display at startup."
+msgstr "Pilih jenis imej yang dipapar ketika permulaan"
+
+msgctxt "#31301"
+msgid "Location of custom image or video to display on startup screen."
+msgstr "Lokasi imej atau video suai yang dipapar ketika skrin permulaan."
+
+msgctxt "#31302"
+msgid "Play custom playlist at startup."
+msgstr "Main senarai main suai ketika permulaan."
+
+msgctxt "#31303"
+msgid "Location of custom startup playlist."
+msgstr "Lokasi senarai main permulaan suai."
+
+msgctxt "#31304"
+msgid "Don't show Screen settings menus (know as side bar menu in some skins)."
+msgstr "Jangan tunjuk menu tetapan Skrin (dikenali sebagai menu palang sisi dalam sesetengah kulit)."
+
+msgctxt "#31305"
+msgid "Select when to show scrollbar."
+msgstr "Pilih bila hendak tunjuk palang tatal."
+
+msgctxt "#31306"
+msgid "Scroll label or textbox contents when length of field exceeds defined length."
+msgstr "Tatal label atau kandungan kotak teks bila panjang medan melangkaui panjang yang ditakrif."
+
+msgctxt "#31307"
+msgid "Show playing media details for playing media."
+msgstr "Tunjuk perincian media dimainkan untuk media yang dimainkan."
+
+msgctxt "#31308"
+msgid "Display a media case around Album or Video cover icon."
+msgstr "Papar bekas media disekeliling ikon kulit hadapan Album atau Video."
+
+msgctxt "#31311"
+msgid "Use Artwork Download script to download additional media images for All library media items."
+msgstr "Guna skrip Muat Turun Kerja Seni untuk memuat turun imej media tambahan bagi Semua item medai pustaka."
+
+msgctxt "#31312"
+msgid "Show current time on home screen."
+msgstr "Tunjuk masa semasa pada skrin rumah."
+
+msgctxt "#31313"
+msgid "Show current weather outlook on home screen."
+msgstr "Tunjuk rupa cuaca semasa pada skrin rumah."
+
+msgctxt "#31314"
+msgid "Location of custom image to use as a watermark on home screen (only on Horizontal home menu type)."
+msgstr "Lokasi imej suai yang digunakan sebagai tera air pada skrin rumah (hanya pada jenis menu rumah Mengufuk)."
+
+msgctxt "#31315"
+msgid "Type of image(s) to use on Movie shelf (On Horizontal or Icon menu type only)."
+msgstr "Jenis imej(s) yang digunakan pada para Cereka (Pada jenis menu Mengufuk atau Ikon sahaja)."
+
+msgctxt "#31316"
+msgid "Type of image(s) to use on TVShows shelf (On Horizontal or Icon menu type only)."
+msgstr "Jenis imej(s) yang digunakan pada para Rancangan TV (Pada jenis menu Mengufuk atau Ikon sahaja)."
+
+msgctxt "#31317"
+msgid "Subtype of image(s) to use on TVShows shelf."
+msgstr "Sub-jenis imej(s) yang digunakan pada para Rancangan TV."
+
+msgctxt "#31318"
+msgid "Type of image(s) to use on Music shelf (On Horizontal or Icon menu type only)."
+msgstr "Jenis imej(s) yang digunakan pada para Muzik (Pada jenis menu Mengufuk atau Ikon sahaja)."
+
+msgctxt "#31319"
+msgid "Type of image(s) to use on Add-ons shelf (On Horizontal or Icon menu type only)."
+msgstr "Jenis imej(s) yang digunakan pada para Tambahan (Pada jenis menu Mengufuk atau Ikon sahaja)."
+
+msgctxt "#31321"
+msgid "Type of Home menu type to use on home menu screen."
+msgstr "Jenis bagi jenis menu Rumah pada skrin menu rumah."
+
+msgctxt "#31322"
+msgid "Show 'Videos' item in home menu."
+msgstr "Tunjuk item 'Video' dalam menu rumah."
+
+msgctxt "#31323"
+msgid "Show 'Movies' item in home menu."
+msgstr "Tunjuk item 'Cereka' dalam menu rumah."
+
+msgctxt "#31324"
+msgid "Show 'TVShows' item in home menu."
+msgstr "Tunjuk item 'Rancangan TV' dalam menu rumah."
+
+msgctxt "#31325"
+msgid "Show 'Music Videos' item in home menu."
+msgstr "Tunjuk item 'Video Muzik' dalam menu rumah."
+
+msgctxt "#31328"
+msgid "Show 'Music' item in home menu."
+msgstr "Tunjuk item 'Muzik' dalam menu rumah."
+
+msgctxt "#31329"
+msgid "Show 'Addons' item in home menu."
+msgstr "Tunjuk item 'Tambahan' dalam menu rumah."
+
+msgctxt "#31330"
+msgid "Show 'Pictures' item in home menu."
+msgstr "Tunjuk item 'Gambar' dalam menu rumah."
+
+msgctxt "#31331"
+msgid "Show User 'Profiles' item in home menu."
+msgstr "Tunjuk item 'Profil' Pengguna dalam menu rumah."
+
+msgctxt "#31332"
+msgid "Show 'Weather' item in home menu."
+msgstr "Tunjuk item 'Cuaca' dalam menu rumah."
+
+msgctxt "#31333"
+msgid "Show User 'Favourites' item in home menu."
+msgstr "Tunjuk item 'Kegemaran' Pengguna dalam menu rumah."
+
+msgctxt "#31334"
+msgid "Show 'Search' item in home menu."
+msgstr "Tunjuk item 'Gelintar' dalam menu rumah."
+
+msgctxt "#31335"
+msgid "Show 'Play Disc' item in home menu."
+msgstr "Tunjuk item 'Main Cakera' dalam menu rumah."
+
+msgctxt "#31336"
+msgid "Show 'Quit' item in home menu."
+msgstr "Tunjuk item 'Keluar' dalam menu rumah."
+
+msgctxt "#31337"
+msgid "Select action of Quit home menu item in home menu screen."
+msgstr "Pilih tindakan bagi item menu rumah Keluar  dalam skrin menu rumah."
+
+msgctxt "#31340"
+msgid "Location of custom skin background image."
+msgstr "Lokasi imej latar belakang kulit suai."
+
+msgctxt "#31341"
+msgid "Use FanArt image if available as skin background image."
+msgstr "Guna imej Seni Peminat jika tersedia sebagai imej latar belakang kulit."
+
+msgctxt "#31342"
+msgid "Use 'Extra' FanArt image if available as skin background image."
+msgstr "Guna imej Seni Peminat 'Ekstra' jika tersedia sebagai imej latar belakang kulit."
+
+msgctxt "#31343"
+msgid "Use Playing video or Music visualisation if available as skin background image."
+msgstr "Guna pengvisualan Video dimainkan atau muzik jika tersedia sebagai imej latar belakang kulit."
+
+msgctxt "#31344"
+msgid "Use Artistslideshow script to provide Music Artist FanArt image if available as skin background image."
+msgstr "Guna skrip Paparan Slain Artis untuk menyediakan imej Seni Peminat Artis Muzik jika tersedia sebagai imej latar belakang kulit."
+
+msgctxt "#31345"
+msgid "Location of custom weather condition background images to use in weather screen."
+msgstr "Lokasi imej latar belakang keadaan cuaca suai yang digunakan dalam skrin cuaca."
+
+msgctxt "#31346"
+msgid "Set level of visibilty of background image."
+msgstr "Tetapkan aras ketampakan imej latar belakang."
+
+msgctxt "#31350"
+msgid "Set location to enter Movie library when Movie item selected on home menu screen."
+msgstr "Tetapkan lokasi untuk memasuki pustaka Cereka bila item Cereka terpilih dalam skrin menu rumah."
+
+msgctxt "#31351"
+msgid "Set location to enter TVShow library when TVShow item selected on home menu screen."
+msgstr "Tetapkan lokasi untuk memasuki pustaka Rancangan TV bila item Rancangan TV terpilih dalam skrin menu rumah."
+
+msgctxt "#31352"
+msgid "Set location to enter Music Video library when Music Video item selected on home menu screen."
+msgstr "Tetapkan lokasi untuk memasuki pustaka Video Muzik bila item Video Muzik terpilih dalam skrin menu rumah."
+
+msgctxt "#31353"
+msgid "Set location to enter Music library when Music item selected on home menu screen."
+msgstr "Tetapkan lokasi untuk memasuki pustaka Muzik bila item Muzik terpilih dalam skrin menu rumah."
+
+msgctxt "#31354"
+msgid "Set location to enter Broardcast TV library when TV item selected on home menu screen."
+msgstr "Tetapkan lokasi untuk memasuki pustaka TV Siaran bila item TV terpilih dalam skrin menu rumah."
+
+msgctxt "#31355"
+msgid "Set location to enter Broadcast Radio library when Radio item selected on home menu screen."
+msgstr "Tetapkan lokasi untuk memasuki pustaka Radio Siaran bila item Radio terpilih dalam skrin menu rumah."
+
+msgctxt "#31360"
+msgid "Sub menu to assign custom favourites to menu items."
+msgstr "Sub menu untuk umpuk kegemaran suai pada item menu."
+
+msgctxt "#31370"
+msgid "Use Debug log uploader script to post a debug log ('Full' debug logging must be turned on before log can be posted)."
+msgstr "Guna skrip pemuat naik log nyahpepijat untuk poskan log nyahpepijat (Pengelogan nyahpepijat 'Lengkap' mesti dihidupkan sebelum log dapat dipos)."
+
+msgctxt "#31371"
+msgid "Turn on 'Full' debug log."
+msgstr "Hidupkan log nyahpepijat 'Lengkap'."
+
+msgctxt "#31372"
+msgid "Turn on debug grid overlay to help users locate on screen skin items."
+msgstr "Hidupkan tindihan atas grid nyahpepijat untuk membantu pengguna mengesan item kulit skrin."
+
+msgctxt "#31373"
+msgid "Turn on debug info overlay to help users identify currently displayed windows and focused screen items."
+msgstr "Hidupkan tindihan atas maklumat nyahpepijat untuk membantu pengguna mengenalpasti tetingkap terpapar semasa dan item kulit terfokus."
+
 msgctxt "#31528"
 msgid "Currently"
 msgstr "Kini"
@@ -116,6 +332,18 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Penyedia"
 
+msgctxt "#31551"
+msgid "Static Icons"
+msgstr "Ikon Statik"
+
+msgctxt "#31552"
+msgid "Animated Icons"
+msgstr "Ikon Beranimasi"
+
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Latar belakang suai"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Profil"
@@ -124,6 +352,10 @@ msgctxt "#31556"
 msgid "Skin"
 msgstr "Kulit"
 
+msgctxt "#31557"
+msgid "Screen Settings"
+msgstr "Tetapan Skrin"
+
 msgctxt "#31558"
 msgid "Power Menu"
 msgstr "Menu Kuasa"
@@ -131,6 +363,18 @@ msgstr "Menu Kuasa"
 msgctxt "#31559"
 msgid "System Info"
 msgstr "Maklumat Sistem"
+
+msgctxt "#31560"
+msgid "Item Settings"
+msgstr "Tetapan Item"
+
+msgctxt "#31561"
+msgid "3D Settings"
+msgstr "Tetapan 3D"
+
+msgctxt "#31562"
+msgid "View:"
+msgstr "Pandangan:"
 
 msgctxt "#31563"
 msgid "Skin Version:"
@@ -187,6 +431,10 @@ msgstr "Tebal"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Lalai Kodi"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Ringan"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -381,12 +629,8 @@ msgid "Use Artistslideshow as background"
 msgstr "Guna Paparan slaid artis sebagai latar belakang"
 
 msgctxt "#31866"
-msgid "Location of Custom Weather backgrounds"
-msgstr "Lokasi latar belakang Cuaca Suai"
-
-msgctxt "#31867"
-msgid "Reset Custom Weather backgrounds"
-msgstr "Tetap semula latar belakang Cuaca Suai"
+msgid "Weather backgrounds"
+msgstr "Latar belakang cuaca"
 
 msgctxt "#31868"
 msgid "Background visibilty"
@@ -405,12 +649,8 @@ msgid "Reset Homescreen Watermark Image"
 msgstr "Tetap Semula Imej Tera Air Skrin Rumah"
 
 msgctxt "#31873"
-msgid "Location of Custom Weather icons"
-msgstr "Lokasi ikon Cuaca Suai"
-
-msgctxt "#31874"
-msgid "Reset Custom Weather icons"
-msgstr "Tetap Semula ikon Cuaca Suai"
+msgid "Weather icons"
+msgstr "Ikon cuaca"
 
 msgctxt "#31875"
 msgid "Always"
@@ -423,6 +663,10 @@ msgstr "Bila tatal atau fokus"
 msgctxt "#31877"
 msgid "Never"
 msgstr "Tidak sesekali"
+
+msgctxt "#31880"
+msgid "Lock Screen settings menus"
+msgstr "Kunci menu tetapan Skrin"
 
 msgctxt "#31881"
 msgid "Use scrollbar"
@@ -635,10 +879,6 @@ msgstr "Cereka Disaran"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "Episod Keudara Berikutnya"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Episod TV Disaran"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
