--- a/language/Norwegian/strings.po
+++ b/language/Norwegian/strings.po
@@ -96,6 +96,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Tilbyder"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Egendefinerte bakgrunner"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Profiler"
@@ -108,6 +112,10 @@ msgctxt "#31559"
 msgid "System Info"
 msgstr "Systeminformasjon"
 
+msgctxt "#31562"
+msgid "View:"
+msgstr "Vis:"
+
 msgctxt "#31575"
 msgid "Default"
 msgstr "Standard"
@@ -119,6 +127,10 @@ msgstr "Fet"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Kodi Standard"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Lett"
 
 msgctxt "#31652"
 msgid "Favourites"
@@ -171,6 +183,10 @@ msgstr "Bakgrunnen"
 msgctxt "#31807"
 msgid "Support"
 msgstr "Støtte"
+
+msgctxt "#31808"
+msgid "Home Screen"
+msgstr "Hjem"
 
 msgctxt "#31875"
 msgid "Always"
