--- a/language/Polish/strings.po
+++ b/language/Polish/strings.po
@@ -52,6 +52,10 @@ msgctxt "#31037"
 msgid "Now Playing"
 msgstr "Teraz odtwarzane"
 
+msgctxt "#31038"
+msgid "Next Skip"
+msgstr "Następny skok"
+
 msgctxt "#31126"
 msgid "Watch in 2D"
 msgstr "Oglądaj w trybie 2D"
@@ -110,7 +114,7 @@ msgstr "Rok:"
 
 msgctxt "#31300"
 msgid "Select type of image to display at startup."
-msgstr "Określa typ obrazy wyświetlanego podczas uruchomienia programu."
+msgstr "Określa typ obrazu wyświetlanego podczas uruchomienia programu."
 
 msgctxt "#31301"
 msgid "Location of custom image or video to display on startup screen."
@@ -124,9 +128,13 @@ msgctxt "#31303"
 msgid "Location of custom startup playlist."
 msgstr "Określa lokalizację niestandardowej listy odtwarzania odtwarzanej po uruchomieniu programu."
 
+msgctxt "#31304"
+msgid "Don't show Screen settings menus (know as side bar menu in some skins)."
+msgstr "Umożliwia ukrycie menu ekranowego (znane jako menu boczne w niektórych skórach)."
+
 msgctxt "#31305"
 msgid "Select when to show scrollbar."
-msgstr "Określa kiedy pokazywać paski przewijania."
+msgstr "Określa widoczność paska przewijania."
 
 msgctxt "#31306"
 msgid "Scroll label or textbox contents when length of field exceeds defined length."
@@ -139,14 +147,6 @@ msgstr "Umożliwia wyświetlanie informacji o mediach podczas ich odtwarzania."
 msgctxt "#31308"
 msgid "Display a media case around Album or Video cover icon."
 msgstr "Umożliwia wyświetlania pudełka wokół okładki albumu lub wideo."
-
-msgctxt "#31309"
-msgid "Location of Weather icons to replace Kodi supplied icons."
-msgstr "Określa lokalizację ikon pogody zastępujących wbudowane w Kodi ikony."
-
-msgctxt "#31310"
-msgid "Use TVTunes script to provide theme tune for Movies and TVShows while browsing library."
-msgstr "Umożliwia używane dodatku TVTunes do odtwarzania motywów muzycznych dla filmów i seriali podczas przeglądania biblioteki."
 
 msgctxt "#31311"
 msgid "Use Artwork Download script to download additional media images for All library media items."
@@ -332,6 +332,18 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Dostawca"
 
+msgctxt "#31551"
+msgid "Static Icons"
+msgstr "Statyczne ikony"
+
+msgctxt "#31552"
+msgid "Animated Icons"
+msgstr "Animowane ikony"
+
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Niestandardowe tła"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Profile"
@@ -359,6 +371,10 @@ msgstr "Ustawienia pozycji"
 msgctxt "#31561"
 msgid "3D Settings"
 msgstr "Ustawienia 3D"
+
+msgctxt "#31562"
+msgid "View:"
+msgstr "Widok:"
 
 msgctxt "#31563"
 msgid "Skin Version:"
@@ -415,6 +431,10 @@ msgstr "Pogrubiona"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Domyślne ustawienia"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "niewielkie"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -609,12 +629,8 @@ msgid "Use Artistslideshow as background"
 msgstr "Wizualizuj odtwarzanie muzyki slajdami wykonawcy"
 
 msgctxt "#31866"
-msgid "Location of Custom Weather backgrounds"
-msgstr "Lokalizacja niestandardowych tapet ekranu pogody"
-
-msgctxt "#31867"
-msgid "Reset Custom Weather backgrounds"
-msgstr "Przywróć domyślne tapety ekranu pogody"
+msgid "Weather backgrounds"
+msgstr "Tła pogody"
 
 msgctxt "#31868"
 msgid "Background visibilty"
@@ -633,12 +649,8 @@ msgid "Reset Homescreen Watermark Image"
 msgstr "Przywróć domyślny znak wodny ekranu startowego"
 
 msgctxt "#31873"
-msgid "Location of Custom Weather icons"
-msgstr "Lokalizacja niestandardowych ikon pogody"
-
-msgctxt "#31874"
-msgid "Reset Custom Weather icons"
-msgstr "Przywróć domyślne ikony pogody"
+msgid "Weather icons"
+msgstr "Ikony pogody"
 
 msgctxt "#31875"
 msgid "Always"
@@ -651,6 +663,10 @@ msgstr "Podczas przewijania lub zaznaczenia"
 msgctxt "#31877"
 msgid "Never"
 msgstr "Nigdy"
+
+msgctxt "#31880"
+msgid "Lock Screen settings menus"
+msgstr "Ustawienia menu ekranu blokady"
 
 msgctxt "#31881"
 msgid "Use scrollbar"
@@ -863,10 +879,6 @@ msgstr "Filmy polecane"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "Odcinki wkrótce na antenie"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Odcinki polecane"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
