--- a/language/Portuguese (Brazil)/strings.po
+++ b/language/Portuguese (Brazil)/strings.po
@@ -48,6 +48,14 @@ msgctxt "#31036"
 msgid "Play Disc"
 msgstr "Reproduzir Disco"
 
+msgctxt "#31037"
+msgid "Now Playing"
+msgstr "Reproduzindo agora"
+
+msgctxt "#31126"
+msgid "Watch in 2D"
+msgstr "Assistir em 2D"
+
 msgctxt "#31129"
 msgid "Finish Time: "
 msgstr "Hora final:"
@@ -100,6 +108,30 @@ msgctxt "#31232"
 msgid "Year:"
 msgstr "Ano:"
 
+msgctxt "#31300"
+msgid "Select type of image to display at startup."
+msgstr "Selecionar o tipo de imagem para mostrar na inicialização."
+
+msgctxt "#31301"
+msgid "Location of custom image or video to display on startup screen."
+msgstr "Localização das imagens personalizadas ou vídeo para mostrar na tela de inicialização."
+
+msgctxt "#31302"
+msgid "Play custom playlist at startup."
+msgstr "Reproduzir lista de reprodução personalizada na inicialização."
+
+msgctxt "#31303"
+msgid "Location of custom startup playlist."
+msgstr "Localização da lista de reprodução personalizada para inicialização."
+
+msgctxt "#31304"
+msgid "Don't show Screen settings menus (know as side bar menu in some skins)."
+msgstr "Não mostrar menu de configuração de tela (conhecido como menu de barra lateral em alguns temas)."
+
+msgctxt "#31305"
+msgid "Select when to show scrollbar."
+msgstr "Escolher quando mostrar a barra de rolagem."
+
 msgctxt "#31528"
 msgid "Currently"
 msgstr "Atualmente"
@@ -116,6 +148,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Fornecedor"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Fundos personalizados"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Perfis"
@@ -131,6 +167,10 @@ msgstr "Menu de Desligamento"
 msgctxt "#31559"
 msgid "System Info"
 msgstr "Info do Sistema"
+
+msgctxt "#31562"
+msgid "View:"
+msgstr "Ver:"
 
 msgctxt "#31563"
 msgid "Skin Version:"
@@ -187,6 +227,10 @@ msgstr "Negrito"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Padrão do Kodi"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Leve"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -380,14 +424,6 @@ msgctxt "#31865"
 msgid "Use Artistslideshow as background"
 msgstr "Usar Slideshow de Artista como fundo"
 
-msgctxt "#31866"
-msgid "Location of Custom Weather backgrounds"
-msgstr "Local das imagens de fundo personalizados de Clima"
-
-msgctxt "#31867"
-msgid "Reset Custom Weather backgrounds"
-msgstr "Redefinir imagens de fundo de Clima presonalizadas"
-
 msgctxt "#31868"
 msgid "Background visibilty"
 msgstr "Visibilidade da imagem de Fundo"
@@ -403,14 +439,6 @@ msgstr "Escolher Imagem de marca-d'água da tela inicial"
 msgctxt "#31872"
 msgid "Reset Homescreen Watermark Image"
 msgstr "Redefinir Imagem de Marca D´Ágau da Tela Inicial"
-
-msgctxt "#31873"
-msgid "Location of Custom Weather icons"
-msgstr "Local dos ícones perswonalizados de Clima"
-
-msgctxt "#31874"
-msgid "Reset Custom Weather icons"
-msgstr "Redefinir ícones de Clima personalizados"
 
 msgctxt "#31875"
 msgid "Always"
@@ -635,10 +663,6 @@ msgstr "Filmes Recomendados"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "Próximos Episódios"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Seriados Recomendados"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
