--- a/language/Portuguese/strings.po
+++ b/language/Portuguese/strings.po
@@ -112,6 +112,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Fornecedor"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Fundos personalizados"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Perfis"
@@ -183,6 +187,10 @@ msgstr "Negrito"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Padrão Kodi"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Leve"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -331,14 +339,6 @@ msgstr "Vídeo personalizado"
 msgctxt "#31860"
 msgid "Choose Custom background"
 msgstr "Escolher o fundo do ecrã"
-
-msgctxt "#31866"
-msgid "Location of Custom Weather backgrounds"
-msgstr "Localização dos fundos do Tempo Personalizados"
-
-msgctxt "#31867"
-msgid "Reset Custom Weather backgrounds"
-msgstr "Reiniciar os fundos do Tempo Personalizado"
 
 msgctxt "#31868"
 msgid "Background visibilty"
@@ -491,10 +491,6 @@ msgstr "Filmes recomendados"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "Próximos Episódios em Exeibição"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Episódios Recomendados"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
