--- a/language/Russian/strings.po
+++ b/language/Russian/strings.po
@@ -112,6 +112,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Источник информации"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Собственные фоны"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Профили"
@@ -127,6 +131,10 @@ msgstr "Управление питанием"
 msgctxt "#31559"
 msgid "System Info"
 msgstr "Информация о системе"
+
+msgctxt "#31562"
+msgid "View:"
+msgstr "Вид:"
 
 msgctxt "#31563"
 msgid "Skin Version:"
@@ -183,6 +191,10 @@ msgstr "Жирный"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Стандартныe для Kodi "
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "небольш."
 
 msgctxt "#31651"
 msgid "Muted"
@@ -311,14 +323,6 @@ msgstr "Использовать ExtraFanart как фон"
 msgctxt "#31865"
 msgid "Use Artistslideshow as background"
 msgstr "Использовать слайдшоу исполнителя как фон"
-
-msgctxt "#31866"
-msgid "Location of Custom Weather backgrounds"
-msgstr "Папка для собственных фонов погоды"
-
-msgctxt "#31867"
-msgid "Reset Custom Weather backgrounds"
-msgstr "Сбросить установки для фонов погоды"
 
 msgctxt "#31868"
 msgid "Background visibilty"
@@ -527,10 +531,6 @@ msgstr "Рекомендуемые Фильмы"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "Будущие серии"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Рекомендуемые ТВ серии "
 
 msgctxt "#31963"
 msgid "Recommended Albums"
