--- a/language/Slovenian/strings.po
+++ b/language/Slovenian/strings.po
@@ -84,6 +84,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Ponudnik"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Poljubna ozadja"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Profili"
@@ -131,6 +135,10 @@ msgstr "Krepko"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Privzeto za Kodi"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Rahel"
 
 msgctxt "#31652"
 msgid "Favourites"
@@ -239,10 +247,6 @@ msgstr "Priporočeno"
 msgctxt "#31960"
 msgid "Recommended Movies"
 msgstr "Priporočeni filmi"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Priporočene TV epizode"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
