--- a/language/Spanish/strings.po
+++ b/language/Spanish/strings.po
@@ -108,6 +108,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Proveedor"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Fondos personalizados"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Perfiles"
@@ -123,6 +127,10 @@ msgstr "Menú de Power"
 msgctxt "#31559"
 msgid "System Info"
 msgstr "Info del sistema"
+
+msgctxt "#31562"
+msgid "View:"
+msgstr "Vista:"
 
 msgctxt "#31563"
 msgid "Skin Version:"
@@ -175,6 +183,10 @@ msgstr "Negrita"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Kodi Default"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Claro"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -411,10 +423,6 @@ msgstr "Recomendado"
 msgctxt "#31960"
 msgid "Recommended Movies"
 msgstr "Películas recomendadas"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Episodios Recomendados"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
