--- a/language/Swedish/strings.po
+++ b/language/Swedish/strings.po
@@ -112,6 +112,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Leverantör"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Anpassade bakgrunder"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Profiles"
@@ -127,6 +131,10 @@ msgstr "Power Meny"
 msgctxt "#31559"
 msgid "System Info"
 msgstr "Systeminformation"
+
+msgctxt "#31562"
+msgid "View:"
+msgstr "Vy:"
 
 msgctxt "#31563"
 msgid "Skin Version:"
@@ -183,6 +191,10 @@ msgstr "Fet"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Kodi standard"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Ljust"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -316,14 +328,6 @@ msgctxt "#31865"
 msgid "Use Artistslideshow as background"
 msgstr "Använd artistbildspel som bakgrund"
 
-msgctxt "#31866"
-msgid "Location of Custom Weather backgrounds"
-msgstr "Plats för anpassade väderbakgrunder"
-
-msgctxt "#31867"
-msgid "Reset Custom Weather backgrounds"
-msgstr "Nollställ anpassade väderbakgrunder"
-
 msgctxt "#31868"
 msgid "Background visibilty"
 msgstr "Bakgrundsvisibilitet"
@@ -335,14 +339,6 @@ msgstr "Välj bild för hemskärmens vattenstämpel"
 msgctxt "#31872"
 msgid "Reset Homescreen Watermark Image"
 msgstr "Nollställ hemskärmens vattenstämpel"
-
-msgctxt "#31873"
-msgid "Location of Custom Weather icons"
-msgstr "Plats för egna väderikoner"
-
-msgctxt "#31874"
-msgid "Reset Custom Weather icons"
-msgstr "Återställ egna väderikoner"
 
 msgctxt "#31875"
 msgid "Always"
@@ -547,10 +543,6 @@ msgstr "Rekommenderade filmer"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "Uppkommande avsnitt"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Rekommenderade TV-avsnitt"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
