--- a/language/Turkish/strings.po
+++ b/language/Turkish/strings.po
@@ -36,9 +36,29 @@ msgctxt "#31030"
 msgid "Music"
 msgstr "Müzik"
 
+msgctxt "#31031"
+msgid "Broadcast"
+msgstr "Yayın"
+
 msgctxt "#31032"
 msgid "Weather"
 msgstr "Hava Durumu"
+
+msgctxt "#31036"
+msgid "Play Disc"
+msgstr "Diski Oynat"
+
+msgctxt "#31037"
+msgid "Now Playing"
+msgstr "Şimdi Yürütülüyor"
+
+msgctxt "#31126"
+msgid "Watch in 2D"
+msgstr "2B olarak izle"
+
+msgctxt "#31129"
+msgid "Finish Time: "
+msgstr "Bitiş Zamanı:"
 
 msgctxt "#31130"
 msgid "Director"
@@ -51,6 +71,10 @@ msgstr "Yazar"
 msgctxt "#31132"
 msgid "Actors"
 msgstr "Aktörler"
+
+msgctxt "#31134"
+msgid "Start Time: "
+msgstr "Başlangıç Zamanı:"
 
 msgctxt "#31135"
 msgid "Details"
@@ -70,7 +94,7 @@ msgstr "Derecelendirme"
 
 msgctxt "#31230"
 msgid "Artist:"
-msgstr "Sanatçı"
+msgstr "Sanatçı:"
 
 msgctxt "#31231"
 msgid "Genre:"
@@ -79,6 +103,22 @@ msgstr "Tür:"
 msgctxt "#31232"
 msgid "Year:"
 msgstr "Yıl"
+
+msgctxt "#31300"
+msgid "Select type of image to display at startup."
+msgstr "Başlangıçta görüntülenecek resim türünü seçin."
+
+msgctxt "#31301"
+msgid "Location of custom image or video to display on startup screen."
+msgstr "Başlangıç ekranında görüntülenecek özel resim veya videonun konumu."
+
+msgctxt "#31302"
+msgid "Play custom playlist at startup."
+msgstr "Başlandıçta özel çalma listesi yürüt."
+
+msgctxt "#31303"
+msgid "Location of custom startup playlist."
+msgstr "Başlangıçta yürütülecek özel çalma listesi konumu."
 
 msgctxt "#31528"
 msgid "Currently"
@@ -96,6 +136,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Sağlayıcı"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Özel arka planlar"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Profiller"
@@ -103,6 +147,50 @@ msgstr "Profiller"
 msgctxt "#31556"
 msgid "Skin"
 msgstr "Dış Görünüm"
+
+msgctxt "#31557"
+msgid "Screen Settings"
+msgstr "Ekran Ayarları"
+
+msgctxt "#31558"
+msgid "Power Menu"
+msgstr "Güç Menüsü"
+
+msgctxt "#31559"
+msgid "System Info"
+msgstr "Sistem Bilgisi"
+
+msgctxt "#31563"
+msgid "Skin Version:"
+msgstr "Dış Görünüm Sürümü:"
+
+msgctxt "#31567"
+msgid "Linux"
+msgstr "Linux"
+
+msgctxt "#31568"
+msgid "MS Windows"
+msgstr "MS Windows"
+
+msgctxt "#31569"
+msgid "iOS"
+msgstr "iOS"
+
+msgctxt "#31570"
+msgid "Mac OS X"
+msgstr "Mac OS X"
+
+msgctxt "#31571"
+msgid "Raspberry Pi"
+msgstr "Raspberry Pi"
+
+msgctxt "#31572"
+msgid "Android"
+msgstr "Android"
+
+msgctxt "#31573"
+msgid "AppleTV"
+msgstr "AppleTV"
 
 msgctxt "#31575"
 msgid "Default"
@@ -115,6 +203,10 @@ msgstr "Kalın"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Kodi Varsayılanı"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Hafif"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -144,6 +236,14 @@ msgctxt "#31693"
 msgid "More..."
 msgstr "Daha fazla..."
 
+msgctxt "#31696"
+msgid "Video Addons"
+msgstr "Video Eklentileri"
+
+msgctxt "#31697"
+msgid "Music Addons"
+msgstr "Müzik Eklentileri"
+
 msgctxt "#31700"
 msgid "Available Groups"
 msgstr "Mevcut Gruplar"
@@ -155,6 +255,22 @@ msgstr "Oynat"
 msgctxt "#31709"
 msgid "TV Guide"
 msgstr "TV Rehberi"
+
+msgctxt "#31710"
+msgid "Radio Guide"
+msgstr "Radyo Rehberi"
+
+msgctxt "#31711"
+msgid "TV Recordings"
+msgstr "TV Kayıtları"
+
+msgctxt "#31712"
+msgid "Radio Recordings"
+msgstr "Radyo Kayıtları"
+
+msgctxt "#31801"
+msgid "Startup"
+msgstr "Başlangıç"
 
 msgctxt "#31802"
 msgid "General"
@@ -202,7 +318,7 @@ msgstr "Coverflow"
 
 msgctxt "#31946"
 msgid "Banner"
-msgstr "Afişler"
+msgstr "Afiş"
 
 msgctxt "#31947"
 msgid "Logos"
@@ -214,7 +330,7 @@ msgstr "Afişler"
 
 msgctxt "#31950"
 msgid "Posters"
-msgstr "Afişler"
+msgstr "Posterler"
 
 msgctxt "#31951"
 msgid "Vertical"
@@ -232,6 +348,10 @@ msgctxt "#31955"
 msgid "Recommended"
 msgstr "Önerilen"
 
+msgctxt "#31960"
+msgid "Recommended Movies"
+msgstr "Önerilen Filmler"
+
 msgctxt "#31963"
 msgid "Recommended Albums"
-msgstr "Önerilen albümler"
+msgstr "Önerilen Albümler"
