--- a/language/Danish/strings.po
+++ b/language/Danish/strings.po
@@ -44,6 +44,10 @@ msgctxt "#31036"
 msgid "Play Disc"
 msgstr "Afspil Disk"
 
+msgctxt "#31037"
+msgid "Now Playing"
+msgstr "Afspiller nu"
+
 msgctxt "#31130"
 msgid "Director"
 msgstr "Instruktør"
@@ -80,6 +84,10 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Leverandør"
 
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Brugerdefinerede baggrunde"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Profiler"
@@ -99,6 +107,10 @@ msgstr "Fed"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Kodi Standard"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Let"
 
 msgctxt "#31652"
 msgid "Favourites"
