--- a/language/English (US)/strings.po
+++ b/language/English (US)/strings.po
@@ -52,6 +52,10 @@ msgctxt "#31037"
 msgid "Now Playing"
 msgstr "Now Playing"
 
+msgctxt "#31038"
+msgid "Next Skip"
+msgstr "Next Skip"
+
 msgctxt "#31126"
 msgid "Watch in 2D"
 msgstr "Watch in 2D"
@@ -124,6 +128,10 @@ msgctxt "#31303"
 msgid "Location of custom startup playlist."
 msgstr "Location of custom startup playlist."
 
+msgctxt "#31304"
+msgid "Don't show Screen settings menus (know as side bar menu in some skins)."
+msgstr "Don't show Screen settings menus (know as side bar menu in some skins)."
+
 msgctxt "#31305"
 msgid "Select when to show scrollbar."
 msgstr "Select when to show scrollbar."
@@ -139,14 +147,6 @@ msgstr "Show playing media details for playing media."
 msgctxt "#31308"
 msgid "Display a media case around Album or Video cover icon."
 msgstr "Display a media case around Album or Video cover icon."
-
-msgctxt "#31309"
-msgid "Location of Weather icons to replace Kodi supplied icons."
-msgstr "Location of Weather icons to replace Kodi supplied icons."
-
-msgctxt "#31310"
-msgid "Use TVTunes script to provide theme tune for Movies and TVShows while browsing library."
-msgstr "Use TVTunes script to provide theme tune for Movies and TVShows while browsing library."
 
 msgctxt "#31311"
 msgid "Use Artwork Download script to download additional media images for All library media items."
@@ -332,6 +332,18 @@ msgctxt "#31536"
 msgid "Provider"
 msgstr "Provider"
 
+msgctxt "#31551"
+msgid "Static Icons"
+msgstr "Static Icons"
+
+msgctxt "#31552"
+msgid "Animated Icons"
+msgstr "Animated Icons"
+
+msgctxt "#31553"
+msgid "Custom backgrounds"
+msgstr "Custom backgrounds"
+
 msgctxt "#31555"
 msgid "Profiles"
 msgstr "Profiles"
@@ -359,6 +371,10 @@ msgstr "Item Settings"
 msgctxt "#31561"
 msgid "3D Settings"
 msgstr "3D Settings"
+
+msgctxt "#31562"
+msgid "View:"
+msgstr "View:"
 
 msgctxt "#31563"
 msgid "Skin Version:"
@@ -415,6 +431,10 @@ msgstr "Bold"
 msgctxt "#31577"
 msgid "Kodi Default"
 msgstr "Kodi Default"
+
+msgctxt "#31578"
+msgid "Light"
+msgstr "Light"
 
 msgctxt "#31651"
 msgid "Muted"
@@ -609,12 +629,8 @@ msgid "Use Artistslideshow as background"
 msgstr "Use Artistslideshow as background"
 
 msgctxt "#31866"
-msgid "Location of Custom Weather backgrounds"
-msgstr "Location of Custom Weather backgrounds"
-
-msgctxt "#31867"
-msgid "Reset Custom Weather backgrounds"
-msgstr "Reset Custom Weather backgrounds"
+msgid "Weather backgrounds"
+msgstr "Weather backgrounds"
 
 msgctxt "#31868"
 msgid "Background visibilty"
@@ -633,12 +649,8 @@ msgid "Reset Homescreen Watermark Image"
 msgstr "Reset Homescreen Watermark Image"
 
 msgctxt "#31873"
-msgid "Location of Custom Weather icons"
-msgstr "Location of Custom Weather icons"
-
-msgctxt "#31874"
-msgid "Reset Custom Weather icons"
-msgstr "Reset Custom Weather icons"
+msgid "Weather icons"
+msgstr "Weather icons"
 
 msgctxt "#31875"
 msgid "Always"
@@ -651,6 +663,10 @@ msgstr "On scroll or focus"
 msgctxt "#31877"
 msgid "Never"
 msgstr "Never"
+
+msgctxt "#31880"
+msgid "Lock Screen settings menus"
+msgstr "Lock Screen settings menus"
 
 msgctxt "#31881"
 msgid "Use scrollbar"
@@ -863,10 +879,6 @@ msgstr "Recommended Movies"
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr "Next Aired Episodes"
-
-msgctxt "#31962"
-msgid "Recommended TV Episodes"
-msgstr "Recommended TV Episodes"
 
 msgctxt "#31963"
 msgid "Recommended Albums"
